Changes made on the Report

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontendmentor15",
-  "homepage": "...",
+  "homepage": "https://raymondkembs.github.io/geolocation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
